# dartfx-fairproxy-api

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: sphinx.yaml  test.yml
src/dartfx/fairproxy_api/: dependencies.py
src/dartfx/fairproxy_api/adapters/: base.py  socrata.py
src/dartfx/fairproxy_api/routers/: catalog.py
tests/: conftest.py
